--- a/scopes.html
+++ b/scopes.html
@@ -63,7 +63,7 @@
         .scope-item {
             background: #f8f9fa;
             border-radius: 12px;
-            padding: 8px 20px;
+            padding: 0;
             margin-bottom: 6px;
             transition: all 0.3s ease;
             border: 2px solid transparent;
@@ -81,6 +81,7 @@
             align-items: center;
             cursor: pointer;
             user-select: none;
+            padding: 8px 20px;
         }
 
         input[type="checkbox"] {
